GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/Contact_Duplicate_Matching_Rule__c.object-meta.xml
<CustomObject>
    <description>This is used to create duplicate matching rules for contact. These rules are used on the Event Registration page.</description>
    <label>Contact Duplicate Matching Rule</label>
    <nameField>
        <label>Contact Duplicate Matching Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Duplicate Matching Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>