GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/fields/Match_on_Null_Values__c.field-meta.xml
<CustomField>
    <fullName>Match_on_Null_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match on Null Values ?</label>
    <type>Checkbox</type>
</CustomField>