GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This decides the order in which the rule is evaluated.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>