GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>This stores the duplicate matching rule created using the embedded VF page</description>
    <label>Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>