GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/fields/Rule_Logic__c.field-meta.xml
<CustomField>
    <fullName>Rule_Logic__c</fullName>
    <label>Rule Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>