GoalTracker/force-app/main/default/objects/Contact_Duplicate_Matching_Rule__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Rule__c</columns>
    <columns>Rule_Logic__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>